# tda-talk

./: LICENSE  README.md  presentation.ipynb  pyproject.toml
docs/: homology.drawio  structure_from_data.drawio
src/: data.py  logic.py
